crates/schemas/tests/compile-fail/public_boxfuture_trait.stderr
error[E0425]: cannot find type `__MissingErrorType` in the crate root
 --> tests/compile-fail/public_boxfuture_trait.rs:5:47
  |
5 |     fn method(&self) -> Result<String, crate::__MissingErrorType>;
  |                                               ^^^^^^^^^^^^^^^^^^ not found in the crate root
